xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__let_nested.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "&run(\"let $x := 1, $y := $x + 3 return $y + 5\").unwrap()"
---
Atomic(
    Integer(
        9,
    ),
)
