xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__let_on_right_side.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"1 + (let $x := 2 return $x + 10)\")"
---
Ok(
    Atomic(
        Integer(
            13,
        ),
    ),
)
