xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__let_uses_own_variable.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"let $x := $x return $x\")"
---
Err(
    XPST0008 {
        src: "let $x := $x return $x",
        span: SourceSpan {
            offset: SourceOffset(
                10,
            ),
            length: SourceOffset(
                2,
            ),
        },
    },
)
