xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__local_name_element.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run_xml(r#\"<doc><a/><b><c/></b></doc>\"#, \"descendant::* / fn:local-name()\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [
                    Atomic(
                        String(
                            "doc",
                        ),
                    ),
                    Atomic(
                        String(
                            "a",
                        ),
                    ),
                    Atomic(
                        String(
                            "b",
                        ),
                    ),
                    Atomic(
                        String(
                            "c",
                        ),
                    ),
                ],
            },
        },
    ),
)
