xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__named_function_ref_call.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"my_function#2(5, 2)\")"
---
Ok(
    Atomic(
        Integer(
            7,
        ),
    ),
)
