xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__nested.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "&run(\"1 + (8 - 2)\").unwrap()"
---
Atomic(
    Integer(
        7,
    ),
)
