xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__nested_for_loop.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"for $i in (10, 20, 30), $j in (1, 2) return $i + $j\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [
                    Atomic(
                        Integer(
                            11,
                        ),
                    ),
                    Atomic(
                        Integer(
                            12,
                        ),
                    ),
                    Atomic(
                        Integer(
                            21,
                        ),
                    ),
                    Atomic(
                        Integer(
                            22,
                        ),
                    ),
                    Atomic(
                        Integer(
                            31,
                        ),
                    ),
                    Atomic(
                        Integer(
                            32,
                        ),
                    ),
                ],
            },
        },
    ),
)
