xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__nested_for_loop_variable_scope.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"for $i in (10, 20), $j in ($i + 1, $i + 2) return $i + $j\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [
                    Atomic(
                        Integer(
                            21,
                        ),
                    ),
                    Atomic(
                        Integer(
                            22,
                        ),
                    ),
                    Atomic(
                        Integer(
                            41,
                        ),
                    ),
                    Atomic(
                        Integer(
                            42,
                        ),
                    ),
                ],
            },
        },
    ),
)
