xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__position_closure.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"(3, 4) ! (let $p := fn:position#0 return $p())\")"
---
Sequence(
    RefCell {
        value: Sequence {
            items: [
                Atomic(
                    Integer(
                        1,
                    ),
                ),
                Atomic(
                    Integer(
                        2,
                    ),
                ),
            ],
        },
    },
)
